--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <li><a href="Aula04-Ex01-Daniela_Ramos.zip" download="Aula04-Ex01-Daniela_Ramos.zip" type="application/zip">Introdução ao HTML</a></li>
         <li><a href="RDE05_Daniela_Ramos.zip" download="RDE05_Daniela_Ramos.zip" type="application/zip">Introdução a hiperlinks</a></li>
         <li><a href="sobre.zip" download="sobre.zip" type="application/zip">Sobre mim</a></li>
+        <li><a href="RDE06_Daniela_Ramos.zip" download="RDE06_Daniela_Ramos.zip" type="application/zip">RDE06</a></li>
+        <li><a href="RDE07_Daniela_Ramos.zip" download="RDE07_Daniela_Ramos.zip" type="application/zip">RDE07</a></li>
     </ul>
 </body>
 </html>
