--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Projeto</title>
 </head>
 <body>
-    <a href="img/Aula02-DW-Daniela_Ramos-1.pdf" target="_blank">Questionário</a><br>
+    <a href="Aula02-DW-Daniela_Ramos-1.pdf" target="_blank">Questionário</a><br>
     <a href="Aula04-Ex01-Daniela_Ramos.html" target="_blank">Introdução ao HTML</a><br>
     <a href="RDE05_Daniela_Ramos.html" target="_blank">Introdução a hiperlinks</a><br>
     <a href="sobre.html" target="_blank">Sobre mim</a><br>
+    <a href="RDE08_Daniela_Ramos.html"_blank">Atividade sobre tags</a><br>
     <br>
     Download:
     <ul>
-        <li><a href="img/Aula02-DW-Daniela_Ramos-1.zip" download="Aula02-DW-Daniela_Ramos-1.zip" type="application/zip">Questionário</a></li>
+        <li><a href="Aula02-DW-Daniela_Ramos-1.zip" download="Aula02-DW-Daniela_Ramos-1.zip" type="application/zip">Questionário</a></li>
         <li><a href="Aula04-Ex01-Daniela_Ramos.zip" download="Aula04-Ex01-Daniela_Ramos.zip" type="application/zip">Introdução ao HTML</a></li>
         <li><a href="RDE05_Daniela_Ramos.zip" download="RDE05_Daniela_Ramos.zip" type="application/zip">Introdução a hiperlinks</a></li>
         <li><a href="sobre.zip" download="sobre.zip" type="application/zip">Sobre mim</a></li>
+        <li><a href="RDE08_Daniela_Ramos.zip" download="RDE08.zip" type="application/zip">Atividade sobre tags.</a></li>
     </ul>
 </body>
 </html>
